--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "author": "Belal Said",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.18.2",
     "express": "^4.16.2"
   }
 }
